# transforms3d

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  Changelog  LICENSE  MANIFEST.in  Makefile  README.rst  conventions.html  dev-requirements.txt  doc-requirements.txt  genindex.html  gimbal_lock.html  glossary.html  index.html  intro.html  naming_conventions.html  objects.inv  package.xml  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: testing.yml  testing.yml.orig
_sources/: conventions.txt  gimbal_lock.rst.txt  index.txt  intro.txt  naming_conventions.rst.txt
_sources/devel/: refactor_plan.rst.txt
_sources/reference/: index.rst.txt  index.txt  transforms3d._gohlketransforms.rst.txt  transforms3d._gohlketransforms.txt  transforms3d._version.txt  transforms3d.affines.txt  transforms3d.axangles.rst.txt  transforms3d.derivations.rst.txt  transforms3d.euler.rst.txt  transforms3d.quaternions.rst.txt  transforms3d.quaternions.txt  transforms3d.reflections.txt  transforms3d.rst.txt  transforms3d.shears.rst.txt  transforms3d.shears.txt  transforms3d.taitbryan.rst.txt  transforms3d.utils.rst.txt  transforms3d.utils.txt  transforms3d.zooms.rst.txt
devel/: make_release.html  refactor_plan.html
doc/: .gitignore  Makefile  README.txt  conf.py  conventions.rst  differences_summary.txt  gimbal_lock.rst  glossary.rst  index.rst  intro.rst  links_names.inc  links_names.txt  make.bat  naming_conventions.rst  notes.txt  refactor_plan.rst
doc/_templates/: indexsidebar.html
doc/devel/: make_release.rst
doc/reference/: index.rst  reflections.rst
doc/sphinxext/: math_dollar.py
doc/tools/: build_modref_templates.py
original/: Makefile  README.rst  README.txt  transformations.py  transformations.py.patch
reference/: index.html  transforms3d._gohlketransforms.html  transforms3d._version.html  transforms3d.affines.html  transforms3d.axangles.html  transforms3d.derivations.html  transforms3d.euler.html  transforms3d.html  transforms3d.quaternions.html  transforms3d.reflections.html  transforms3d.shears.html  transforms3d.taitbryan.html  transforms3d.utils.html  transforms3d.zooms.html
tools/: travis_tools.sh
transforms3d/: LICENSE  README.rst  __init__.py  _gohlketransforms.py  _version.py  affines.py  axangles.py  conftest.py  euler.py  gohlketransforms.py  quaternions.py  reflections.py  shears.py  taitbryan.py  testing.py  transform_graph.py  utils.py  zooms.py  zooms_shears.py
transforms3d/derivations/: __init__.py  angle_axes.py  decompositions.py  eulerangles.py  quaternions.py  rotations.py  utils.py
transforms3d/testing/: __init__.py  samples.py  utils.py
transforms3d/tests/: __init__.py  samples.py  test_affines.py  (+11 more)
(+3 files in other folders)
